test_programs/compile_failure/noirc_frontend_tests_numeric_generic_as_unused_trait_fn_param_type/src/main.nr

    trait Foo {
        fn foo<let I: u32>(_x: I) { }
    }
    